<?xml version="1.0" encoding="utf-8"?>


<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_marginBottom="12dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3">


        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/my_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/lightGreen"
                android:elevation="4dp"
                android:textAlignment="center"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/toolbar_header"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:fontFamily="sans-serif-medium"/>
                </RelativeLayout>
            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:layout_weight="1">

            <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/main_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:animateLayoutChanges="true"
                    android:weightSum="3">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_gravity="center_vertical"
                        android:background="@color/lightGreen"
                        android:id="@+id/showTextLayout"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_gravity="center"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:textSize="28dp"
                            android:text="@string/air_quality"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_gravity="center"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:layout_margin="8dp"
                            android:textStyle="bold"
                            android:textSize="40dp"
                            android:id="@+id/air_condition"
                            android:text="Good"/>
                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:layout_marginRight="30dp"
                            android:layout_marginTop="10dp"
                            android:layout_gravity="center">
                            <TextView
                                android:layout_marginTop="20dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:textColor="@color/white"
                                android:textSize="24dp"
                                android:text="@string/high_pollution"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:id="@+id/element_name"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textSize="30dp"
                                android:text="SO2"
                                android:background="@drawable/shape_text_display"/>
                        </RelativeLayout>
                        <TextView
                            android:id="@+id/main_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:textSize="70dp"
                            android:text="19.50"/>
                        <TextView
                            android:id="@+id/main_text_view_cube"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textSize="15dp"
                            android:textColor="@color/white"
                            android:text="ug/m3"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/showDataLayout"
                        android:layout_weight="2">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:weightSum="3">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1">

                                <com.github.mikephil.charting.charts.LineChart
                                    android:id="@+id/lineChart1"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_alignParentTop="true"
                                    android:layout_marginTop="0dp"></com.github.mikephil.charting.charts.LineChart>
                            </RelativeLayout>

                            <RelativeLayout
                                android:id="@+id/down_layout"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="15dp"
                                android:layout_marginRight="15dp"
                                android:layout_weight="2"
                                android:orientation="horizontal">

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:layout_alignParentLeft="true"
                                    android:orientation="vertical">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:textStyle="bold"
                                        android:id="@+id/time_ago_v"
                                        android:layout_marginTop="10dp"
                                        android:text="22s ago" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:id="@+id/station_address"
                                        android:layout_alignParentLeft="true"
                                        android:layout_marginTop="10dp"
                                        android:text="Tbilisi, Tsereteli str." />

                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:layout_alignParentRight="true"
                                    android:orientation="vertical">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:textStyle="bold"
                                        android:layout_marginTop="10dp"
                                        android:text="237 M"
                                        android:id="@+id/station_distance"/>

                                    <ImageButton
                                        android:id="@+id/showStation"
                                        android:layout_width="30dp"
                                        android:layout_height="30dp"
                                        android:background="@mipmap/up"
                                        android:adjustViewBounds="true"

                                        android:scaleType="center"
                                        android:onClick="showStations"
                                         />
                                </LinearLayout>

                            </RelativeLayout>
                        </LinearLayout>

                    </LinearLayout>


                </LinearLayout>



            </android.support.design.widget.CoordinatorLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="5dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:id="@+id/station_layout">


            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:choiceMode="singleChoice"
                android:id="@+id/main_page_list_view"
                android:dividerHeight="2dp"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"/>


        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_item" />

</android.support.v4.widget.DrawerLayout>